# hopperbot

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  main.py  pyproject.toml  setup.cfg  setup_database.py  test.db  test.py  test_sqlite.py  test_thread_posting.py  test_thread_screenshot.py  timings.py  tweets.db
hopperbot/: __init__.py  config.py  core.py  database.py  errors.py  hoppertasks.py  people.py  pronouns.py  renderer.py  tumblr.py  twitter.py  twitter_update.py  updates.py  youtube.py
tests/: mixed_case_config.toml  no_twitter_config.toml  simple_good_config.toml  test_config.py  test_database.py  test_renderer.py  test_twitter_update.py
