[tool.poetry]
name = "hopperbot"
version = "0.1.0"
description = ""
authors = ["LoadingWave"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = {extras = ["async"], version = "^4.12.0"}
PyTumblr2 = "^0.2.2"
selenium = "^4.4.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
